<resources>
    <string name="app_name">CASE-OTPM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="please_check_your_network_connection">Please check your network connection</string>
    <string name="txt_loading">Loading</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="ok">Ok</string>
    <string name="OK">OK</string>
    <string name="login">Login</string>
    <string name="view_configuration">View Configuration</string>
    <string name="add_rework">Add Rework</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="remark_type">Rework Type</string>
    <string name="select_type">Select Type</string>
    <string name="status">Status</string>
    <string name="add">Add</string>
    <string name="okol_hold">OKOL Hold</string>
    <string name="okol_clear">OKOL Clear</string>
    <string name="pdi_hold">PDI Hold</string>
    <string name="gt">GT</string>
    <string name="hold">HOLD</string>
    <string name="enter_machine_no">Enter Machine No.</string>
    <string name="machine_list">Machine List</string>
    <string name="export_data">Export Data</string>
    <string name="shortage_reason">Shortage Reason</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="new_rework">New Rework</string>
</resources>