<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/dimen_dp100"
        android:background="@drawable/bottom_dialog_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/vertical_margin_dp16">


            <com.flyco.roundview.RoundTextView
                android:layout_width="@dimen/dimen_dp45"
                android:layout_height="@dimen/dimen_dp8"
                android:layout_marginBottom="@dimen/dimen_dp12"
                app:rv_backgroundColor="@color/gray"
                app:rv_isRadiusHalfHeight="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/add_remark"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/horizontal_margin_dp16"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/addRemarkTextViewHeading"
                    android:text="@string/description" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edRemarkDescription"
                    style="@style/addRemarkEditText"
                    android:hint="@string/enter_description" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/addRemarkTextViewHeading"
                android:layout_marginTop="@dimen/dimen_dp8"
                android:text="@string/remark_type" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRemarkType"
                style="@style/addRemarkEditText"
                android:layout_height="@dimen/dimen_dp45"
                android:background="@color/gray"
                android:inputType="textEmailAddress"
                android:text="@string/select_type"
                android:textColor="@color/dark_gray" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/addRemarkTextViewHeading"
                android:layout_marginTop="@dimen/dimen_dp8"
                android:text="@string/status" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swIsPaid"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_dp20"
                android:layout_centerInParent="true"
                android:checked="false"
                android:drawablePadding="@dimen/dimen_dp8"
                android:padding="@dimen/dimen_dp4"
                android:text="Not Ok"
                android:textColor="@color/text_sec"
                android:textSize="@dimen/text_14sp"
                app:switchMinWidth="@dimen/dimen_dp8" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tvUpdate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_dp50"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/horizontal_margin_dp16"
                android:background="@color/colorSecondary"
                android:gravity="center"
                android:padding="@dimen/dimen_dp12"
                android:text="@string/add"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>