<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".ui.fragment.HomeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/horizontal_margin_dp16"
        android:paddingTop="@dimen/dimen_dp8"
        android:paddingEnd="@dimen/horizontal_margin_dp16">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ivVNavigationToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_dp8"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp"
            app:srcCompat="@drawable/ic_menu" />

        <View
            android:layout_width="@dimen/dimen_dp0"
            android:layout_height="@dimen/dimen_dp1"
            android:layout_weight="1" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_dp0"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen_dp20">

        <com.flyco.roundview.RoundTextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_dp45"
            android:layout_marginStart="@dimen/dimen_dp20"
            android:layout_marginEnd="@dimen/dimen_dp20"
            android:gravity="center"
            app:rv_strokeColor="@color/colorPrimary"
            android:text="OKOL Date"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18sp" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.flyco.roundview.RoundTextView
                android:id="@+id/rtvOKOLDate"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_dp45"
                android:layout_marginStart="@dimen/dimen_dp20"
                android:layout_marginEnd="@dimen/dimen_dp20"
                android:layout_weight="1"
                android:gravity="center"
                app:rv_strokeColor="@color/colorPrimary"
                android:text="OKOL Date"
                app:rv_strokeWidth="@dimen/dimen_dp1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18sp" />

            <com.flyco.roundview.RoundTextView
                android:id="@+id/rtvAddRemark"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_dp45"
                android:layout_marginStart="@dimen/dimen_dp20"
                android:layout_marginEnd="@dimen/dimen_dp20"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/add_rework"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18sp"
                app:rv_backgroundColor="@color/colorPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/horizontal_margin_dp16"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llBottomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="horizontal">

            <com.flyco.roundview.RoundTextView
                android:id="@+id/rtvHold"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_dp45"
                android:layout_margin="@dimen/dimen_dp20"
                android:layout_weight="1"
                app:rv_isRadiusHalfHeight="true"
                android:paddingStart="@dimen/dimen_dp12"
                android:paddingEnd="@dimen/dimen_dp12"
                android:gravity="center"
                android:text="@string/hold"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18sp"
                app:rv_backgroundColor="@color/red" />

            <com.flyco.roundview.RoundTextView
                android:id="@+id/rtvClear"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_dp45"
                android:layout_margin="@dimen/dimen_dp20"
                android:layout_weight="1"
                app:rv_isRadiusHalfHeight="true"
                android:paddingStart="@dimen/dimen_dp12"
                android:paddingEnd="@dimen/dimen_dp12"
                android:gravity="center"
                android:text="@string/OK"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18sp"
                app:rv_backgroundColor="@color/colorPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>